@@ -1,37 +1,33 @@
 package kawa.standard;
 import gnu.kawa.lispexpr.ScmRead;
 import gnu.mapping.*;
+import gnu.text.*;
 
-public class read extends Procedure0or1 {
+public class read extends Procedure0or1
+{
   public final Object apply0 ()
+    throws Throwable
   {
     return apply1 (InPort.inDefault());
   }
 
   public final Object apply1 (Object arg1)
+    throws Throwable
   {
     if (! (arg1 instanceof InPort))
       throw new WrongType (this.name(), 0, "input port");
+    ScmRead lexer = new ScmRead((InPort)arg1);
     try
       {
-	ScmRead lexer = new ScmRead((InPort)arg1);
-	Object result = lexer.readObject((InPort)arg1);
-	gnu.text.SourceError errors = lexer.getErrors();
-	if (errors != null)
-	  {
-	    lexer.checkErrors(null, 0);
-	    throw new RuntimeException("syntax error in read: "
-				       + errors.toString());
-	  }
+	Object result = lexer.readObject();
+	if (lexer.seenErrors())
+	  throw new SyntaxException(lexer.getMessages());
 	return result;
       }
-    catch (gnu.text.SyntaxException e)
+    catch (SyntaxException ex)
       {
-	throw new RuntimeException("syntax error in read: " + e.toString ());
-      }
-    catch (java.io.IOException e)
-      {
-	throw new WrappedException(e);
+	ex.setHeader("syntax error in read:");
+	throw ex;
       }
   }
 }
