@@ -1,5 +1,9 @@
 2002-01-29  Per Bothner  <per@bothner.com>
 
+	* read.java:  Since apply1 can now throw Throwable, don't need to
+	wrap exception.  However, so call SyntaxException's new setHeader.
+	Don't call ScmRead's statuc readObject, which creates a new ScmRead.
+
 	* configure.in:  Also make link to gnu/xquery/testsuite/bib.xml.in.
 
 	* gnu/brl:  New package - code imported from BRL.
